tests/errors/init_state/move_and_drop/drop_of_uninit.sim

        fn f() {
          x: i64;
          entry:
            drop x;
            return
        }
        